generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum PollStatus {
  draft
  active
  closed
  tallied
}

enum TokenStatus {
  active
  used
  expired
}

enum TxStatus {
  pending
  broadcast
  confirmed
  failed
  dropped
}

enum TallyStatus {
  pending
  final
  disputed
}

enum AuthType {
  evm
  webauthn
  ed25519
}

enum Role {
  user
  admin
  organization
  auditor
  owner
}

model User {
  id         BigInt   @id @default(autoincrement())
  email      String   @unique @db.VarChar(255)
  fullName   String?  @map("full_name") @db.VarChar(255)
  isEligible Boolean  @default(true) @map("is_eligible")
  authType   AuthType @default(evm) @map("auth_type")
  publicKey  String?  @map("public_key") @db.VarChar(132)
  photoUrl   String?  @map("photo_url") @db.Text
  createdAt  DateTime @default(now()) @map("created_at")
  role       Role     @default(user)
  whitelistedPolls PollWhitelist[]

  wallet Wallet?
  tokens VotingToken[]
  polls  Poll[]

  @@map("users")
}

model Wallet {
  id        BigInt   @id @default(autoincrement())
  userId    BigInt   @unique @map("user_id")
  address   String   @unique @db.VarChar(42)
  chain     String   @default("polygon") @db.VarChar(20)
  createdAt DateTime @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("wallets")
}

model Poll {
  id            BigInt     @id
  name          String     @db.VarChar(255)
  description   String?    @db.Text
  startDate     DateTime   @map("start_date")
  endDate       DateTime   @map("end_date")
  status        PollStatus @default(draft)
  createdAt     DateTime   @default(now()) @map("created_at")
  chainPollId   BigInt?    @map("chain_poll_id")
  voteType      Int        @default(0) @map("vote_type")
  maxChoices    Int        @default(1) @map("max_choices")
  rsaPublicKeyN Bytes?
  rsaPublicKeyE Bytes?
  photoUrl      String?    @map("photo_url") @db.VarChar(500)
  whitelists    PollWhitelist[]
  createdById   BigInt?    @map("created_by_id")

  createdBy     User?      @relation(fields: [createdById], references: [id])

  candidates    Candidate[]
  tokens        VotingToken[]
  votes         Vote[]
  revealedVotes RevealedVote[]
  transactions  Transaction[]
  tallyResult   TallyResult?

  @@map("polls")
}

model Candidate {
  id          BigInt  @id
  pollId      BigInt  @map("poll_id")
  name        String  @db.VarChar(255)
  description String? @db.Text
  photoUrl    String? @map("photo_url") @db.VarChar(500)

  poll      Poll          @relation(fields: [pollId], references: [id], onDelete: Cascade)
  tallyWins TallyResult[] @relation("TallyWinner")

  @@map("candidates")
}

model VotingToken {
  id        BigInt      @id
  userId    BigInt      @map("user_id")
  pollId    BigInt      @map("poll_id")
  tokenHash String      @unique @map("token_hash") @db.VarChar(64)
  issuedAt  DateTime    @default(now()) @map("issued_at")
  usedAt    DateTime?   @map("used_at")
  status    TokenStatus @default(active)

  user User @relation(fields: [userId], references: [id])
  poll Poll @relation(fields: [pollId], references: [id])

  @@map("voting_tokens")
}

model Vote {
  id        BigInt    @id
  pollId    BigInt    @map("poll_id")
  serial    Bytes     @unique
  voteHash  Bytes     @map("vote_hash")
  signature Bytes
  castAt    DateTime  @default(now()) @map("cast_at")
  status    String    @default("committed")
  castedAt  DateTime? @map("casted_at")

  poll         Poll          @relation(fields: [pollId], references: [id])
  transaction  Transaction?
  revealedVote RevealedVote?

  @@map("votes")
}

model Transaction {
  id            BigInt    @id
  pollId        BigInt    @map("poll_id")
  voteId        BigInt?   @unique @map("vote_id")
  txHash        String    @unique @map("tx_hash") @db.VarChar(66)
  chain         String    @default("polygon") @db.VarChar(20)
  status        TxStatus  @default(pending)
  blockNumber   BigInt?   @map("block_number")
  confirmations Int       @default(0)
  nonce         Int?
  retries       Int       @default(0)
  gasUsed       BigInt?   @map("gas_used")
  gasPrice      BigInt?   @map("gas_price")
  errorMessage  String?   @map("error_message") @db.Text
  payload       Json?
  createdAt     DateTime  @default(now()) @map("created_at")
  updatedAt     DateTime  @updatedAt @map("updated_at")
  confirmedAt   DateTime? @map("confirmed_at")

  poll Poll  @relation(fields: [pollId], references: [id])
  vote Vote? @relation(fields: [voteId], references: [id])

  @@map("transactions")
}

model TallyResult {
  id                BigInt      @id
  pollId            BigInt      @unique @map("poll_id")
  winnerCandidateId BigInt?     @map("winner_candidate_id")
  resultsData       Json        @map("results_data")
  status            TallyStatus @default(pending)
  computedAt        DateTime    @default(now()) @map("computed_at")
  totalVotes        Int         @default(0) @map("total_votes")
  
  poll              Poll        @relation(fields: [pollId], references: [id])
  winnerCandidate   Candidate?  @relation("TallyWinner", fields: [winnerCandidateId], references: [id])

  @@map("tally_results")
}

model RevealedVote {
  id         BigInt   @id
  voteId     BigInt   @unique
  pollId     BigInt   @map("poll_id")
  rankings   String // Store encrypted rankings as base64 string
  revealedAt DateTime @default(now()) @map("revealed_at")

  vote Vote @relation(fields: [voteId], references: [id])
  poll Poll @relation(fields: [pollId], references: [id])

  @@map("revealed_votes")
}

model PollWhitelist {
  id        BigInt   @id
  pollId    BigInt
  userId    BigInt
  createdAt DateTime @default(now())

  poll      Poll     @relation(fields: [pollId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([pollId, userId])
  @@map("poll_whitelist")
}
